tests/fixtures/invalid/bytes_bitand_bytes.py
# Cannot bitwise AND Bytes and Bytes
x: bytes = b"hello" & b"hello"
